--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input type="text" class="form-control" id="firstnameInput" placeholder="Vorname">
             </div>
             <div class="form-group">
-                <label for="lastnameInput">Vorname:</label>
+                <label for="lastnameInput">Nachname:</label>
                 <input type="text" class="form-control" id="lastnameInput" placeholder="Nachname">
             </div>
             <div class="container-fluid">
